# Letsformer

./: .gitignore  README.md  main.py  pyproject.toml
data/: low_data.txt
docs/img/: Transformer.drawio
scripts/: encode_dataset.py  generate.py  train_lm.py  train_tokenizer.py
src/letsformer/: BPETokenizer.py  Layers.py  __init__.py  config.py  debug.py  functions.py  optim.py  tokenizer.py  util.py
tests/: test_tokenizer.py  test_train_bpe.py  test_utils.py
