[project]
name = "letsformer"
version = "0.1.0"
description = "Lettle's Transformer"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "einops>=0.8",      # tensor operations
    "numpy>=2.4",
    "torch~=2.11.0",
    "regex>=2026.3.32", # more powerful regex than the builtin `re` module

]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "letsformer"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"
