[project]
name = "letsformer"
version = "0.1.0"
description = "Lettle's Transformer"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "einops>=0.8",      # tensor operations
    "numpy>=2.4",
    "torch~=2.11.0",
    "regex>=2026.3.32", # more powerful regex than the builtin `re` module
    "jaxtyping>=0.3.9",
    "rich>=15.0.0",
    "matplotlib>=3.10.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.build-backend]
module-name = "letsformer"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"
